New command builder is in open beta now

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="сonsole"
+name="quentincaffeino-console"
 description=""
 author="QuentinCaffeino"
-version="1.1.1"
+version="1.1.2"
 script="plugin.gd"
