Docs: Add @hpn33 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -41,6 +41,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "hpn33",
+      "name": "hpn332",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/16251202?v=4",
+      "profile": "https://github.com/hpn33",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
