--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -50,6 +50,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "danilw",
+      "name": "Danil",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/24825887?v=4",
+      "profile": "https://github.com/danilw",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
