--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -68,6 +68,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "SamanthaClarke1",
+      "name": "Samantha Clarke",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/24452702?v=4",
+      "profile": "https://github.com/SamanthaClarke1",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
