Docs: Add @Calinou as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -77,6 +77,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "Calinou",
+      "name": "Hugo Locurcio",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/180032?v=4",
+      "profile": "https://hugo.pro",
+      "contributions": [
+        "a11y"
+      ]
     }
   ],
   "contributorsPerLine": 7
