--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -86,6 +86,15 @@
       "contributions": [
         "a11y"
       ]
+    },
+    {
+      "login": "DmDerbin",
+      "name": "Dmitry Derbin",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/6673326?v=4",
+      "profile": "https://github.com/DmDerbin",
+      "contributions": [
+        "question"
+      ]
     }
   ],
   "contributorsPerLine": 7
