--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -95,6 +95,15 @@
       "contributions": [
         "question"
       ]
+    },
+    {
+      "login": "VitexHD",
+      "name": "VitexHD",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/31520916?v=4",
+      "profile": "https://github.com/VitexHD",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
