--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -104,7 +104,16 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "hilfazer",
+      "name": "hilfazer",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/29497869?v=4",
+      "profile": "https://github.com/hilfazer",
+      "contributions": [
+        "code"
+      ]
     }
   ],
-  "contributorsPerLine": 7
+  "contributorsPerLine": 8
 }
