Docs: Add @crazychenz as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -113,6 +113,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "crazychenz",
+      "name": "Crazy Chenz",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/792769?v=4",
+      "profile": "https://github.com/crazychenz",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 8
