--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,2 +1,17 @@
-- name: Changelog CI
-  uses: saadmk11/changelog-ci@v0.6.1
+name: Changelog CI
+
+# Controls when the action will run. Triggers the workflow on a pull request
+on:
+  pull_request:
+    types: [opened, reopened]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Checks-out your repository
+      - uses: actions/checkout@v2
+
+      - name: Run Changelog CI
+        uses: saadmk11/changelog-ci@v0.6.1
