--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -9,4 +9,7 @@ jobs:
   update_release_draft:
     runs-on: ubuntu-latest
     steps:
-    - uses: release-drafter/release-drafter@v5.11.0
+      # Drafts your next Release notes as Pull Requests are merged into "master"
+      - uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
