--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ root = true
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = false
-insert_final_newline = false
+insert_final_newline = true
 
 [*.gd]
 indent_style = tab
