--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,linux,godot,python,windows,node
+
+addons/*
+!addons/quentincaffeino/
