chore: run tests using pnpm instead of makefile

--- a/.gitattributes
+++ b/.gitattributes
@@ -11,4 +11,5 @@
 /Makefile                   export-ignore
 /package.json               export-ignore
 /pnpm-lock.yaml             export-ignore
+/pnpm-workspace.yaml        export-ignore
 /README.md                  export-ignore
