--- a/.gitignore
+++ b/.gitignore
@@ -387,4 +387,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/osx,linux,godot,python,windows,node
 
 addons/*
+addons/**/addons
 !addons/quentincaffeino/
