--- a/demo-csharp/Demo-csharp.csproj
+++ b/demo-csharp/Demo-csharp.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Godot.NET.Sdk/3.3.0">
+<Project Sdk="Godot.NET.Sdk/4.0.0-beta.16">
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Democsharp</RootNamespace>
   </PropertyGroup>
 </Project>
