--- a/demo-csharp/Demo-csharp.csproj
+++ b/demo-csharp/Demo-csharp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Godot.NET.Sdk/4.0.0-beta.16">
+<Project Sdk="Godot.NET.Sdk/4.0.0">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Democsharp</RootNamespace>
